--- a/house-starter-pageVUE.html
+++ b/house-starter-pageVUE.html
@@ -10,79 +10,84 @@
 </head>
 
 <body>
-    <img class="logo" src="descarga.jpg" alt="kids team logo">
-    <nav class="navbar navbar-inverse" id="house">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+    <div id="page">
+        <img class="logo" src="usa.gif" alt="kids playing">
+        <div class="correo">
+    <img src="Info_Light.png">
+    <a href="mailto:info@tgif.net">info@tgif.net</a>
+    </div>
+        <nav class="navbar navbar-inverse" id="house">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                    <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-attendance-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-attendance-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-party-loyalty-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-party-loyalty-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
-                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-starter-pageVUE.html">House</a></li>
-                        <li><a href="senate-starter-pageVUE.html">Senate</a></li>
-                    </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-attendance-starter-page.html">House</a></li>
-                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
-                    </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
-                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
-                    </ul>
-                </li>
-            </ul>
+        </nav>
+
+        <!--Table container-->
+        <div id="app">
+            <div>
+                <h2>Congressmen</h2>
+                <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
+                <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
+
+                <div>
+                    <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
+                    <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
+                    <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
+                    <select id="menu" @change="filterCongress">
+                        <option id="all">ALL
+                        </option>
+                        <option v-for="item in uniqs">{{item}}
+                        </option>
+                    </select>
+                </div>
+                <div class="container">
+                    <table id="tabla1" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Party</th>
+                                <th>State</th>
+                                <th>Years in Office</th>
+                                <th>% Vote W/ Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="item in members">
+                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td>{{item.party}}</td>
+                                <td>{{item.state}}</td>
+                                <td>{{item.seniority}}</td>
+                                <td>{{item.votes_with_party_pct}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="loading-bar"></div>
+                </div>
+            </div>
         </div>
-    </nav>
-
-    <!--Table container-->
-    <div id="app">
-        <div>
-            <h2>Congressmen</h2>
-            <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
-            <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-
-            <div>
-                <input type="checkbox" name="party" value="D" id="Democrat" @click="showDemocrats" checked> Democrat
-                <input type="checkbox" name="party" value="R" id="Republican" @click="showDemocrats" checked> Republican
-                <input type="checkbox" name="party" value="I" id="Independent" @click="showDemocrats" checked> Independent
-            </div>
-
-            <div>
-                <select id="menu" @change="showDemocrats">
-                    <option id="all">ALL
-                    </option>
-                    <option v-for="item in uniqs">{{item}}
-                    </option>
-
-                </select>
-            </div>
-
-            <div class="container">
-                <table id="tabla1" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Party</th>
-                            <th>State</th>
-                            <th>Years in Office</th>
-                            <th>% Vote W/ Party</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="item in members">
-                            <td>{{item.first_name}} {{item.last_name}}</td>
-                            <td>{{item.party}}</td>
-                            <td>{{item.state}}</td>
-                            <td>{{item.seniority}}</td>
-                            <td>{{item.votes_with_party_pct}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div class="final">
+            2016 TGIF | All Right Reserverd
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
