--- a/senate-attendance-starter-pageVUE.html
+++ b/senate-attendance-starter-pageVUE.html
@@ -6,114 +6,126 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <img class="logo" src="descarga.jpg" alt="kids team logo">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+    <div id="page">
+        <img class="logo" src="usa.gif" alt="kids playing">
+        <div class="correo">
+    <img src="Info_Light.png">
+    <a href="mailto:info@tgif.net">info@tgif.net</a>
+    </div>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-attendance-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-attendance-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-party-loyalty-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-party-loyalty-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-starter-page.html">House</a></li>
-                        <li><a href="senate-starter-page.html">Senate</a></li>
-                    </ul>
-                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-attendance-starter-pageVUE.html">House</a></li>
-                        <li><a href="senate-attendance-starter-pageVUE.html">Senate</a></li>
-                    </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-party-loyalty-starter-pageVUE.html">House</a></li>
-                        <li><a href="senate-party-loyalty-starter-pageVUE.html">Senate</a></li>
-                    </ul>
-                </li>
-            </ul>
+        </nav>
+
+
+        <header>
+            <div>
+            </div>
+        </header>
+        <!--Table container-->
+        <div id="app">
+            <h2>Attendance</h2>
+            <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
+
+            <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
+
+            <h2>Senate at a glance</h2>
+            <div id="senate2" class="container">
+                <table id="tabla2" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Party</th>
+                            <th>Number of Reps</th>
+                            <th>% Voted with Prty</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Democrats</td>
+                            <td>{{statistics.numDem}}</td>
+                            <td>{{statistics.compDem}}</td>
+
+                        </tr>
+                        <tr>
+                            <td>Republicans</td>
+                            <td>{{statistics.numRep}}</td>
+                            <td>{{statistics.compRep}}</td>
+
+                        </tr>
+                        <tr>
+                            <td>Independets</td>
+                            <td>{{statistics.numInd}}</td>
+                            <td>0</td>
+
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <h2>Least Engaged (Bottom 10% Attendance)</h2>
+            <div id="sa" class="container">
+                <table id="tabla6" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <td>Name</td>
+                            <td>Number of Missed Votes</td>
+                            <td>% Missed</td>
+                        </tr>
+                        <tr v-for="item in statistics.memlosemenosVote">
+                            <td>{{item.first_name}} {{item.last_name}}</td>
+                            <td>{{item.missed_votes}}</td>
+                            <td>{{item.missed_votes_pct}}</td>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+
+            <h2>Most Engaged (Top 10% Attendance)</h2>
+            <div id="sa2" class="container">
+                <table id="tabla6" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <td>Name</td>
+                            <td>Number of Missed Votes</td>
+                            <td>% Missed</td>
+                        </tr>
+                        <tr v-for="item in statistics.memlosemayorVote">
+                            <td>{{item.first_name}} {{item.last_name}}</td>
+                            <td>{{item.missed_votes}}</td>
+                            <td>{{item.missed_votes_pct}}</td>
+                        </tr>
+                    </thead>
+                </table>
+                <div class="loading-bar"></div>
+            </div>
         </div>
-    </nav>
-
-
-    <header>
-        <div>
-        </div>
-    </header>
-    <!--Table container-->
-    <div id="app">
-        <h2>Attendance</h2>
-        <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
-
-        <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
-
-        <h2>Senate at a glance</h2>
-        <div id="senate2" class="container">
-            <table id="tabla2" class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Party</th>
-                        <th>Number of Reps</th>
-                        <th>% Voted with Prty</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Democrats</td>
-                        <td>{{statistics.numDem}}</td>
-                        <td>{{statistics.compDem}}</td>
-
-                    </tr>
-                    <tr>
-                        <td>Republicans</td>
-                        <td>{{statistics.numRep}}</td>
-                        <td>{{statistics.compRep}}</td>
-
-                    </tr>
-                    <tr>
-                        <td>Independets</td>
-                        <td>{{statistics.numInd}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <h2>Least Engaged (Bottom 10% Attendance)</h2>
-        <div id="sa" class="container">
-            <table id="tabla6" class="table table-striped">
-                <thead>
-                    <tr>
-                        <td>Name</td>
-                        <td>Number of Missed Votes</td>
-                        <td>% Missed</td>
-                    </tr>
-                    <tr v-for="item in statistics.memlosemenosVote">
-                        <td>{{item.first_name}} {{item.last_name}}</td>
-                        <td>{{item.missed_votes}}</td>
-                        <td>{{item.missed_votes_pct}}</td>
-                    </tr>
-                </thead>
-            </table>
-        </div>
-
-        <h2>Most Engaged (Top 10% Attendance)</h2>
-        <div id="sa2" class="container">
-            <table id="tabla6" class="table table-striped">
-                <thead>
-                    <tr>
-                        <td>Name</td>
-                        <td>Number of Missed Votes</td>
-                        <td>% Missed</td>
-                    </tr>
-                    <tr v-for="item in statistics.memlosemayorVote">
-                        <td>{{item.first_name}} {{item.last_name}}</td>
-                        <td>{{item.missed_votes}}</td>
-                        <td>{{item.missed_votes_pct}}</td>
-                    </tr>
-                </thead>
-            </table>
+        <div class="final">
+            2016 TGIF | All Right Reserverd
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
