--- a/senate-starter-pageVUE.html
+++ b/senate-starter-pageVUE.html
@@ -10,61 +10,62 @@
 </head>
 
 <body>
-    <img class="logo" src="descarga.jpg" alt="kids team logo">
-    <nav class="navbar navbar-inverse" id="senate">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+    <div id="page">
+        <img class="logo" src="usa.gif" alt="kids playing">
+       <div class="correo">
+    <img src="Info_Light.png">
+    <a href="mailto:info@tgif.net">info@tgif.net</a>
+    </div>
+        <nav class="navbar navbar-inverse" id="senate">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                    <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-attendance-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-attendance-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-party-loyalty-starter-pageVUE.html">House</a></li>
+                            <li><a href="senate-party-loyalty-starter-pageVUE.html">Senate</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
-                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-starter-pageVUE.html">House</a></li>
-                        <li><a href="senate-starter-pageVUE.html">Senate</a></li>
-                    </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-attendance-starter-page.html">House</a></li>
-                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
-                    </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
-                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
 
 
 
-    <header>
-        <div>
-        </div>
-    </header>
-    <!--Table container-->
-    <div id="app">
+        <header>
+            <div>
+            </div>
+        </header>
+        <!--Table container-->
+        <div id="app">
             <div>
                 <h2>Senators</h2>
                 <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
 
                 <div>
-                    <input type="checkbox" name="party" value="D" id="Democrat" @click="showDemocrats" checked> Democrat
-                    <input type="checkbox" name="party" value="R" id="Republican" @click="showDemocrats" checked> Republican
-                    <input type="checkbox" name="party" value="I" id="Independent" @click="showDemocrats" checked> Independent
-                </div>
-
-                <div>
-                    <select id="menu" @change="showDemocrats">
+                    <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
+                    <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
+                    <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
+                    <select id="menu" @change="filterCongress">
                         <option id="all">ALL
                         </option>
                         <option v-for="item in uniqs">{{item}}
                         </option>
                     </select>
                 </div>
-
                 <div class="container">
                     <table id="tabla1" class="table table-striped">
                         <thead>
@@ -86,9 +87,14 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div class="loading-bar"></div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="final">
+        2016 TGIF | All Right Reserverd
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="mainVue.js"></script>
 </body>
