--- a/house-attendance-starter-pageVUE.html
+++ b/house-attendance-starter-pageVUE.html
@@ -107,7 +107,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="item in statistics.memlosemenosVote">
-                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td class="name"><a :href="item.url">{{item.first_name}} {{item.last_name}}</a></td>
                                 <td>{{item.missed_votes}}</td>
                                 <td>{{item.missed_votes_pct}}</td>
                             </tr>
@@ -126,7 +126,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="item in statistics.memlosemayorVote">
-                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td class="name"><a :href="item.url">{{item.first_name}} {{item.last_name}}</a></td>
                                 <td>{{item.missed_votes}}</td>
                                 <td>{{item.missed_votes_pct}}</td>
                             </tr>
