--- a/house-starter-pageVUE.html
+++ b/house-starter-pageVUE.html
@@ -76,7 +76,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="item in members">
-                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td class="name"><a :href="item.url">{{item.first_name}} {{item.last_name}}</a></td>
                                 <td>{{item.party}}</td>
                                 <td>{{item.state}}</td>
                                 <td>{{item.seniority}}</td>
