--- a/senate-party-loyalty-starter-pageVUE.html
+++ b/senate-party-loyalty-starter-pageVUE.html
@@ -107,7 +107,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="item in statistics.memfnVote">
-                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td class="name"><a :href="item.url">{{item.first_name}} {{item.last_name}}</a></td>
                                 <td>{{item.total_votes}}</td>
                                 <td>{{item.votes_with_party_pct}}</td>
                             </tr>
@@ -126,7 +126,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="item in statistics.memfVote">
-                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td class="name"><a :href="item.url">{{item.first_name}} {{item.last_name}}</a></td>
                                 <td>{{item.total_votes}}</td>
                                 <td>{{item.votes_with_party_pct}}</td>
                             </tr>
